<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/website_edittext"
                android:text="@string/edittext_uri"
                android:textSize="25sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_website_button"
                android:text="@string/button_uri"
                android:layout_marginLeft="10dp"
                android:onClick="openWebsite"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/location_edittext"
                android:text="@string/edittext_loc"
                android:textSize="25sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/open_location_button"
                android:text="@string/button_loc"
                android:layout_marginLeft="10dp"
                android:onClick="openLocation"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/share_edittext"
                android:text="@string/edittext_share"
                android:textSize="25sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/share_text_button"
                android:text="@string/button_share"
                android:layout_marginLeft="10dp"
                android:onClick="shareText"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ALARM _ 1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_hour"
                    android:hint="@string/open_Alarm_Hour"
                    android:textSize="25sp"/>
                <TextView
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:text=":"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/alarm_minute"
                    android:hint="@string/open_Alarm_Minute"
                    android:textSize="25sp"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_alarm_button"
                android:text="@string/open_Alarm"
                android:layout_marginLeft="10dp"
                android:onClick="openAlarm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ALARM _ 2"/>
            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_picker"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/set_alarm_timepicker"
                android:text="@string/open_Alarm_tp"
                android:layout_marginLeft="10dp"
                android:onClick="openAlarm_tp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>